Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
   <h1>Fabry Orihuela</h1>
   <p>Rock Latino • Live Music</p>
 
-  <a class="button" href="https://wa.me/14845442917?text=Hola%20Fabry%20👋%20Quiero%20pedir%20una%20canción%20🎶">
-🎶 Pedir Canción
-</a>
+  <a class="button" href="#pedir">🎶 Pedir Canción</a>
   <a class="button" href="#">📅 Shows</a>
   <a class="button" href="#">🛍️ Merchandising</a>
   <a class="button" href="#">💵 Propina</a>
