--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <h1>Fabry Orihuela</h1>
   <p>Rock Latino • Live Music</p>
 
-  <a class="button" href="https://wa.me/14845442917?text=Hola%20Fabry%20👋%20Quiero%20pedir%20una%20canción%20🎶">
+  <a class="button" href="https://wa.me/14845442917?text=Hola%20Fabry%20🙌%20quiero%20pedirte%20una%20canción">
 🎶 Pedir Canción
 </a>
   <a class="button" href="#">📅 Shows</a>
