--- a/canciones.html
+++ b/canciones.html
@@ -3,86 +3,128 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Repertorio | Fabry Orihuela</title>
+  <title>Repertorio – Fabry Orihuela</title>
   <style>
-    :root{ --bg:#0b0b0f; --card:#14141c; --txt:#f3f3f5; --muted:#a7a7b3; --red:#e11d2e; }
-    body{ margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial; background:var(--bg); color:var(--txt); }
-    header{ padding:18px 16px 10px; }
-    h1{ margin:0 0 6px; font-size:22px; }
-    p{ margin:0; color:var(--muted); font-size:14px; }
-    .wrap{ padding:12px 16px 28px; }
-    .topbar{ display:flex; gap:10px; align-items:center; margin:14px 0; }
-    input{ flex:1; padding:12px 12px; border-radius:12px; border:1px solid #2a2a35; background:#0f0f16; color:var(--txt); }
-    .btn{ padding:12px 14px; border-radius:12px; border:0; background:var(--red); color:white; font-weight:700; }
-    .btn.secondary{ background:#232334; color:var(--txt); border:1px solid #2a2a35; }
-    .list{ display:grid; gap:10px; }
-    .item{ background:var(--card); border:1px solid #232334; border-radius:14px; padding:12px; display:flex; justify-content:space-between; align-items:center; }
-    .song{ font-weight:700; }
-    .artist{ color:var(--muted); font-size:13px; margin-top:2px; }
-    .pill{ font-size:12px; padding:6px 10px; border-radius:999px; border:1px solid #2a2a35; background:#101018; color:var(--muted); }
-    .empty{ color:var(--muted); margin-top:12px; }
-    a{ color:inherit; text-decoration:none; }
+    :root {
+      --bg:#0b0b0f;
+      --card:#12121a;
+      --text:#f3f3f6;
+      --muted:#b7b7c2;
+      --accent:#e11d2e; /* rojo */
+      --border: rgba(255,255,255,.08);
+    }
+    body { margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; background:var(--bg); color:var(--text); }
+    header { padding:18px 16px 10px; position:sticky; top:0; background:linear-gradient(180deg,var(--bg) 0%, rgba(11,11,15,.85) 70%, rgba(11,11,15,0) 100%); backdrop-filter: blur(6px); }
+    h1 { margin:0 0 10px; font-size:20px; letter-spacing:.3px; }
+    .row { display:flex; gap:10px; flex-wrap:wrap; }
+    .btn{
+      display:inline-block; text-decoration:none; color:var(--text);
+      background:var(--card); border:1px solid var(--border);
+      padding:10px 12px; border-radius:12px; font-weight:600;
+    }
+    .btn.accent { background:var(--accent); border-color: rgba(0,0,0,.15); }
+    .search{
+      width:100%; box-sizing:border-box; margin-top:12px;
+      padding:12px 12px; border-radius:12px; border:1px solid var(--border);
+      background:var(--card); color:var(--text); font-size:16px;
+      outline:none;
+    }
+    main { padding: 10px 16px 40px; }
+    .meta { color:var(--muted); font-size:13px; margin-top:8px; }
+    .artist{
+      margin-top:18px; padding:12px; border-radius:14px;
+      background:var(--card); border:1px solid var(--border);
+    }
+    .artist h2 { margin:0 0 8px; font-size:16px; color:var(--text); }
+    ul { margin:0; padding-left:18px; }
+    li { padding:4px 0; }
   </style>
 </head>
 <body>
   <header>
-    <h1>🎶 Repertorio disponible</h1>
-    <p>Busca y elige una canción. (Luego te lleva a confirmar el pedido)</p>
+    <h1>Repertorio</h1>
+    <div class="row">
+      <a class="btn" href="index.html">⬅️ Home</a>
+      <a class="btn accent" href="pedir.html">🎶 Pedir canción</a>
+      <a class="btn" href="propina.html">💵 Propina</a>
+    </div>
+    <input id="q" class="search" placeholder="Buscar por artista o canción…" autocomplete="off" />
+    <div id="count" class="meta">Cargando…</div>
   </header>
 
-  <div class="wrap">
-    <div class="topbar">
-      <input id="q" placeholder="Buscar canción o artista…" autocomplete="off" />
-      <a class="btn secondary" href="index.html">← Volver</a>
-    </div>
+  <main id="list"></main>
 
-    <div id="list" class="list"></div>
-    <div id="empty" class="empty" style="display:none;">No encontré resultados.</div>
-  </div>
+<script>
+  async function loadSongs() {
+    const res = await fetch('canciones.json', { cache: 'no-store' });
+    if(!res.ok) throw new Error('No pude cargar canciones.json');
+    return await res.json();
+  }
 
-  <script>
-    // ✅ EDITA AQUÍ tu repertorio (puedes ir agregando)
-    const SONGS = [
-      { title: "Rayando el Sol", artist: "Maná" },
-      { title: "De Música Ligera", artist: "Soda Stereo" },
-      { title: "Lamento Boliviano", artist: "Los Enanitos Verdes" },
-      { title: "Persiana Americana", artist: "Soda Stereo" },
-      { title: "Oye Mi Amor", artist: "Maná" },
-    ];
+  function groupByArtist(items) {
+    const map = new Map();
+    for (const it of items) {
+      const a = (it.artist || '').trim();
+      const t = (it.title || '').trim();
+      if(!a || !t) continue;
+      if(!map.has(a)) map.set(a, []);
+      map.get(a).push(t);
+    }
+    for (const [a, arr] of map.entries()) {
+      arr.sort((x,y)=>x.localeCompare(y,'es',{sensitivity:'base'}));
+    }
+    return Array.from(map.entries()).sort((x,y)=>x[0].localeCompare(y[0],'es',{sensitivity:'base'}));
+  }
 
-    const listEl = document.getElementById("list");
-    const emptyEl = document.getElementById("empty");
-    const qEl = document.getElementById("q");
+  function render(grouped) {
+    const root = document.getElementById('list');
+    root.innerHTML = '';
+    for (const [artist, titles] of grouped) {
+      const section = document.createElement('section');
+      section.className = 'artist';
 
-    function render(filter="") {
-      const f = filter.trim().toLowerCase();
-      const rows = SONGS.filter(s =>
-        (s.title + " " + s.artist).toLowerCase().includes(f)
-      );
+      const h2 = document.createElement('h2');
+      h2.textContent = artist;
+      section.appendChild(h2);
 
-      listEl.innerHTML = "";
-      emptyEl.style.display = rows.length ? "none" : "block";
+      const ul = document.createElement('ul');
+      for (const title of titles) {
+        const li = document.createElement('li');
+        li.textContent = title;
+        ul.appendChild(li);
+      }
+      section.appendChild(ul);
+      root.appendChild(section);
+    }
+  }
 
-      rows.forEach(s => {
-        const div = document.createElement("div");
-        div.className = "item";
-        div.innerHTML = `
-          <div>
-            <div class="song">${escapeHtml(s.title)}</div>
-            <div class="artist">${escapeHtml(s.artist)}</div>
-          </div>
-          <a class="btn" href="confirmar.html?cancion=${encodeURIComponent(s.title)}&artista=${encodeURIComponent(s.artist)}">Pedir</a>
-        `;
-        listEl.appendChild(div);
-      });
+  function filter(items, q) {
+    q = (q||'').trim().toLowerCase();
+    if(!q) return items;
+    return items.filter(it => {
+      const a = (it.artist||'').toLowerCase();
+      const t = (it.title||'').toLowerCase();
+      return a.includes(q) || t.includes(q);
+    });
+  }
+
+  (async () => {
+    const all = await loadSongs();
+    const input = document.getElementById('q');
+    const count = document.getElementById('count');
+
+    function update() {
+      const filtered = filter(all, input.value);
+      const grouped = groupByArtist(filtered);
+      render(grouped);
+      count.textContent = `Mostrando ${filtered.length} canciones (ordenado por artista).`;
     }
 
-    function escapeHtml(str){
-      return String(str).replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
-    }
-
-    qEl.addEventListener("input", e => render(e.target.value));
-    render();
-  </script>
+    input.addEventListener('input', update);
+    update();
+  })().catch(err => {
+    document.getElementById('count').textContent = 'Error: ' + err.message;
+  });
+</script>
 </body>
 </html>
