--- a/confirmar.html
+++ b/confirmar.html
@@ -3,62 +3,40 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Confirmar pedido | Fabry Orihuela</title>
+  <title>Confirmar pedido</title>
   <style>
-    :root{ --bg:#0b0b0f; --card:#14141c; --txt:#f3f3f5; --muted:#a7a7b3; --red:#e11d2e; }
-    body{ margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial; background:var(--bg); color:var(--txt); }
-    .wrap{ padding:18px 16px 28px; }
-    .card{ background:var(--card); border:1px solid #232334; border-radius:16px; padding:16px; }
-    h1{ margin:0 0 10px; font-size:22px; }
-    .muted{ color:var(--muted); }
-    input{ width:100%; margin-top:10px; padding:12px; border-radius:12px; border:1px solid #2a2a35; background:#0f0f16; color:var(--txt); }
-    .btn{ width:100%; margin-top:12px; padding:14px; border-radius:12px; border:0; background:var(--red); color:white; font-weight:800; font-size:16px; }
-    a{ color:inherit; text-decoration:none; }
-    .back{ display:inline-block; margin-top:12px; color:var(--muted); }
+    body{margin:0;font-family:system-ui;background:#0b0b0f;color:#fff;padding:18px}
+    .card{background:#12121a;border:1px solid rgba(255,255,255,.08);border-radius:14px;padding:16px}
+    h1{margin:0 0 10px;font-size:20px}
+    p{color:#cfcfd6}
+    .btn{display:block;text-align:center;text-decoration:none;color:#fff;background:#e11d2e;
+      padding:14px;border-radius:12px;font-weight:700;margin-top:12px}
+    .btn.secondary{background:#12121a;border:1px solid rgba(255,255,255,.12)}
+    small{display:block;color:#aaa;margin-top:10px}
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <h1>✅ Confirmar pedido</h1>
-    <div class="card">
-      <div id="song" style="font-weight:800; font-size:18px;"></div>
-      <div id="artist" class="muted" style="margin-top:6px;"></div>
+  <div class="card">
+    <h1>Confirmar pedido</h1>
+    <p id="song"></p>
 
-      <label class="muted" style="display:block; margin-top:14px;">Tu nombre (opcional)</label>
-      <input id="nombre" placeholder="Ej: Ana" />
+    <a id="wa" class="btn" href="#">📲 Enviar por WhatsApp</a>
+    <a class="btn secondary" href="propina.html">💵 Continuar a Propina</a>
 
-      <button class="btn" id="enviar">Enviar pedido</button>
-      <a class="back" href="canciones.html">← Volver al repertorio</a>
-    </div>
+    <small>Si WhatsApp no abre, toca otra vez el botón.</small>
   </div>
 
-  <script>
-    const params = new URLSearchParams(location.search);
-    const cancion = params.get("cancion") || "";
-    const artista = params.get("artista") || "";
-    document.getElementById("song").textContent = "🎶 " + cancion;
-    document.getElementById("artist").textContent = artista ? "Artista: " + artista : "";
+<script>
+  const params = new URLSearchParams(location.search);
+  const cancion = params.get("cancion") || "";
+  const artista = params.get("artista") || "";
+  const texto = `Hola Fabry! Quiero pedir: ${cancion} — ${artista}`;
 
-    // ✅ WhatsApp de Fabry
-    const FABRY_WA = "14845442917"; // sin +, sin espacios
+  document.getElementById("song").textContent = `🎶 ${cancion} — ${artista}`;
 
-    document.getElementById("enviar").addEventListener("click", () => {
-      const nombre = document.getElementById("nombre").value.trim();
-      const msg =
-        `🎶 Pedido de canción\n` +
-        `Canción: ${cancion}${artista ? " — " + artista : ""}\n` +
-        (nombre ? `Nombre: ${nombre}\n` : "") +
-        `Hora: ${new Date().toLocaleTimeString()}`;
-
-      // 1) abre WhatsApp para enviarte el pedido
-      const wa = `https://wa.me/${FABRY_WA}?text=${encodeURIComponent(msg)}`;
-      window.open(wa, "_blank");
-
-      // 2) luego manda a propina sugerida
-      setTimeout(() => {
-        window.location.href = "propina.html";
-      }, 400);
-    });
-  </script>
+  const phone = "14845442917"; // tu WhatsApp
+  const waLink = `https://wa.me/${phone}?text=${encodeURIComponent(texto)}`;
+  document.getElementById("wa").href = waLink;
+</script>
 </body>
 </html>
