--- a/canciones.html
+++ b/canciones.html
@@ -5,124 +5,107 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Repertorio – Fabry Orihuela</title>
   <style>
-    :root {
-      --bg:#0b0b0f;
-      --card:#12121a;
-      --text:#f3f3f6;
-      --muted:#b7b7c2;
-      --accent:#e11d2e; /* rojo */
-      --border: rgba(255,255,255,.08);
-    }
-    body { margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; background:var(--bg); color:var(--text); }
-    header { padding:18px 16px 10px; position:sticky; top:0; background:linear-gradient(180deg,var(--bg) 0%, rgba(11,11,15,.85) 70%, rgba(11,11,15,0) 100%); backdrop-filter: blur(6px); }
-    h1 { margin:0 0 10px; font-size:20px; letter-spacing:.3px; }
-    .row { display:flex; gap:10px; flex-wrap:wrap; }
-    .btn{
-      display:inline-block; text-decoration:none; color:var(--text);
-      background:var(--card); border:1px solid var(--border);
-      padding:10px 12px; border-radius:12px; font-weight:600;
-    }
-    .btn.accent { background:var(--accent); border-color: rgba(0,0,0,.15); }
-    .search{
-      width:100%; box-sizing:border-box; margin-top:12px;
-      padding:12px 12px; border-radius:12px; border:1px solid var(--border);
-      background:var(--card); color:var(--text); font-size:16px;
-      outline:none;
-    }
-    main { padding: 10px 16px 40px; }
-    .meta { color:var(--muted); font-size:13px; margin-top:8px; }
-    .artist{
-      margin-top:18px; padding:12px; border-radius:14px;
-      background:var(--card); border:1px solid var(--border);
-    }
-    .artist h2 { margin:0 0 8px; font-size:16px; color:var(--text); }
-    ul { margin:0; padding-left:18px; }
-    li { padding:4px 0; }
+    :root{--bg:#0b0b0f;--card:#12121a;--text:#f3f3f6;--muted:#b7b7c2;--accent:#e11d2e;--border:rgba(255,255,255,.08);}
+    body{margin:0;font-family:system-ui;background:var(--bg);color:var(--text)}
+    header{padding:18px 16px 10px;position:sticky;top:0;background:linear-gradient(180deg,var(--bg) 0%,rgba(11,11,15,.85) 70%,rgba(11,11,15,0) 100%);backdrop-filter:blur(6px)}
+    h1{margin:0 0 10px;font-size:20px}
+    .row{display:flex;gap:10px;flex-wrap:wrap}
+    .btn{display:inline-block;text-decoration:none;color:var(--text);background:var(--card);border:1px solid var(--border);padding:10px 12px;border-radius:12px;font-weight:600}
+    .btn.accent{background:var(--accent);border-color:rgba(0,0,0,.15)}
+    .search{width:100%;box-sizing:border-box;margin-top:12px;padding:12px;border-radius:12px;border:1px solid var(--border);background:var(--card);color:var(--text);font-size:16px}
+    main{padding:10px 16px 40px}
+    .meta{color:var(--muted);font-size:13px;margin-top:8px}
+    .artist{margin-top:18px;padding:12px;border-radius:14px;background:var(--card);border:1px solid var(--border)}
+    .artist h2{margin:0 0 8px;font-size:16px}
+    .item{display:flex;align-items:center;justify-content:space-between;gap:10px;padding:8px 0;border-top:1px solid rgba(255,255,255,.06)}
+    .item:first-child{border-top:none}
+    .song{font-weight:700}
+    .small{color:var(--muted);font-size:12px}
+    .pick{display:inline-block;text-decoration:none;background:var(--accent);color:#fff;padding:10px 12px;border-radius:12px;font-weight:800;white-space:nowrap}
   </style>
 </head>
 <body>
-  <header>
-    <h1>Repertorio</h1>
-    <div class="row">
-      <a class="btn" href="index.html">⬅️ Home</a>
-      <a class="btn accent" href="pedir.html">🎶 Pedir canción</a>
-      <a class="btn" href="propina.html">💵 Propina</a>
-    </div>
-    <input id="q" class="search" placeholder="Buscar por artista o canción…" autocomplete="off" />
-    <div id="count" class="meta">Cargando…</div>
-  </header>
+<header>
+  <h1>Repertorio</h1>
+  <div class="row">
+    <a class="btn" href="index.html">⬅️ Home</a>
+    <a class="btn" href="propina.html">💵 Propina</a>
+  </div>
+  <input id="q" class="search" placeholder="Buscar por artista o canción…" autocomplete="off" />
+  <div id="count" class="meta">Cargando…</div>
+</header>
 
-  <main id="list"></main>
+<main id="list"></main>
 
 <script>
-  async function loadSongs() {
-    const res = await fetch('canciones.json', { cache: 'no-store' });
+  async function loadSongs(){
+    const res = await fetch('canciones.json', {cache:'no-store'});
     if(!res.ok) throw new Error('No pude cargar canciones.json');
     return await res.json();
   }
 
-  function groupByArtist(items) {
+  function groupByArtist(items){
     const map = new Map();
-    for (const it of items) {
-      const a = (it.artist || '').trim();
-      const t = (it.title || '').trim();
-      if(!a || !t) continue;
+    for(const it of items){
+      const a=(it.artist||'').trim();
+      const t=(it.title||'').trim();
+      if(!a||!t) continue;
       if(!map.has(a)) map.set(a, []);
       map.get(a).push(t);
     }
-    for (const [a, arr] of map.entries()) {
+    for(const [a,arr] of map.entries()){
       arr.sort((x,y)=>x.localeCompare(y,'es',{sensitivity:'base'}));
     }
     return Array.from(map.entries()).sort((x,y)=>x[0].localeCompare(y[0],'es',{sensitivity:'base'}));
   }
 
-  function render(grouped) {
-    const root = document.getElementById('list');
-    root.innerHTML = '';
-    for (const [artist, titles] of grouped) {
-      const section = document.createElement('section');
-      section.className = 'artist';
+  function filter(items,q){
+    q=(q||'').trim().toLowerCase();
+    if(!q) return items;
+    return items.filter(it=>{
+      const a=(it.artist||'').toLowerCase();
+      const t=(it.title||'').toLowerCase();
+      return a.includes(q)||t.includes(q);
+    });
+  }
 
-      const h2 = document.createElement('h2');
-      h2.textContent = artist;
-      section.appendChild(h2);
-
-      const ul = document.createElement('ul');
-      for (const title of titles) {
-        const li = document.createElement('li');
-        li.textContent = title;
-        ul.appendChild(li);
-      }
-      section.appendChild(ul);
+  function render(grouped){
+    const root=document.getElementById('list');
+    root.innerHTML='';
+    for(const [artist,titles] of grouped){
+      const section=document.createElement('section');
+      section.className='artist';
+      section.innerHTML=`<h2>${artist}</h2>`;
+      titles.forEach(title=>{
+        const row=document.createElement('div');
+        row.className='item';
+        row.innerHTML = `
+          <div>
+            <div class="song">${title}</div>
+            <div class="small">${artist}</div>
+          </div>
+          <a class="pick" href="confirmar.html?cancion=${encodeURIComponent(title)}&artista=${encodeURIComponent(artist)}">Pedir</a>
+        `;
+        section.appendChild(row);
+      });
       root.appendChild(section);
     }
   }
 
-  function filter(items, q) {
-    q = (q||'').trim().toLowerCase();
-    if(!q) return items;
-    return items.filter(it => {
-      const a = (it.artist||'').toLowerCase();
-      const t = (it.title||'').toLowerCase();
-      return a.includes(q) || t.includes(q);
-    });
-  }
-
-  (async () => {
+  (async()=>{
     const all = await loadSongs();
-    const input = document.getElementById('q');
-    const count = document.getElementById('count');
+    const input=document.getElementById('q');
+    const count=document.getElementById('count');
 
-    function update() {
-      const filtered = filter(all, input.value);
-      const grouped = groupByArtist(filtered);
-      render(grouped);
-      count.textContent = `Mostrando ${filtered.length} canciones (ordenado por artista).`;
+    function update(){
+      const f=filter(all,input.value);
+      render(groupByArtist(f));
+      count.textContent = `Mostrando ${f.length} canciones (ordenado por artista).`;
     }
 
     input.addEventListener('input', update);
     update();
-  })().catch(err => {
+  })().catch(err=>{
     document.getElementById('count').textContent = 'Error: ' + err.message;
   });
 </script>
