--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <h1>Fabry Orihuela</h1>
   <p>Rock Latino • Live Music</p>
 
-  <a href="canciones.html" class="btn-pedir">🎶 Pedir canción</a>
+  <a href="canciones.html" class="button"-pedir">🎶 Pedir canción</a>
   <a class="button" href="#">📅 Shows</a>
   <a class="button" href="#">🛍️ Merchandising</a>
   <a class="button" href="#">💵 Propina</a>
