--- a/shows.Html
+++ b/shows.Html
@@ -1,30 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Shows – Fabry Orihuela</title>
+  <meta charset="UTF-8">
+  <title>Shows en vivo – Fabry Orihuela</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
-    body{margin:0;background:#0b0b0f;color:#fff;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;}
-    header{padding:18px 16px;}
-    a{color:#fff;text-decoration:none;}
-    .btn{display:inline-block;padding:12px 14px;border-radius:14px;background:#12121a;border:1px solid rgba(255,255,255,.10);font-weight:700;}
-    .btn-red{background:#e11d2e;border-color: rgba(0,0,0,.2);}
-    .wrap{padding:0 16px 24px;}
-    iframe{width:100%;height:75vh;border:0;border-radius:16px;overflow:hidden;}
-    .note{opacity:.8;font-size:13px;margin-top:10px}
+    body {
+      margin: 0;
+      background-color: #0b0b0f;
+      color: white;
+      font-family: Arial, sans-serif;
+    }
+
+    header {
+      padding: 15px;
+      text-align: center;
+      background-color: #111;
+    }
+
+    h1 {
+      margin: 0;
+      color: #e11d2e;
+    }
+
+    .back {
+      display: inline-block;
+      margin: 10px;
+      padding: 10px 15px;
+      background-color: #222;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+    }
+
+    iframe {
+      border: none;
+      width: 100%;
+      height: 85vh;
+    }
   </style>
 </head>
+
 <body>
+
   <header>
-    <a class="btn" href="index.html">⬅️ Home</a>
-    <span style="margin-left:10px;font-weight:800;">📅 Shows</span>
+    <h1>📅 Shows en vivo</h1>
+    <a class="back" href="index.html">⬅️ Volver al Home</a>
   </header>
 
-  <div class="wrap">
-    <!-- Reemplaza TU_CALENDAR_EMBED_URL por el link embed de Google Calendar -->
-    <iframe src="https://calendar.google.com/calendar/embed?src=fabricioorihuelamusic%40gmail.com&ctz=America%2FNew_YorkEMBED_URL"iframe>
-    <div class="note">Si no ves el calendario, avísame y lo ajustamos.</div>
-  </div>
+  <iframe 
+    src="https://calendar.google.com/calendar/embed?src=fabricioorihuelamusic%40gmail.com&ctz=America%2FNew_York">
+  </iframe>
+
 </body>
 </html>
