--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <p>Rock Latino • Live Music</p>
 
   <a href="canciones.html" class="button"-pedir">🎶 Pedir canción</a>
-  <a href="shows.html"📆 class="button"Shows</a>
+  <a href="shows.html" href="#">class="button"Shows</a>
   <a class="button" href="#">🛍️ Merchandising</a>
   <a class="button" href="#">💵 Propina</a>
   <a class="button" href="#">📲 Sígueme en mis redes</a>
