--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
   <p>Rock Latino • Live Music</p>
 
   <a href="canciones.html" class="button"-pedir">🎶 Pedir canción</a>
-  <a href="shows.html" class="button">🎤 Shows</a>
+  <a href="shows.html" class="button">🎤 Mis Shows</a>
   <a class="button" href="#">🛍️ Merchandising</a>
   <a class="button" href="#">💵 Propina</a>
   <a class="button" href="#">📲 Sígueme en mis redes</a>
 
   <p style="margin-top:40px; font-size:14px;">
-    Muchas gracias por tu aporte 🤗
+    
   </p>
 
 </body>
