--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
 
   <h1>Fabry Orihuela</h1>
-  <p>Rock Latino • Live Music</p>
+  <p>Cantante/Guitarrista • Live Music</p>
 
   <a href="canciones.html" class="button"-pedir">🎶 Pedir canción</a>
   <a href="shows.html" class="button">🎤 Mis Shows</a>
