--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <title>Fabry Orihuela | Official Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body {
-<img src="img/fondo.jpg" style="width:100%; border:5px solid red;">
+    body {<img src="img/fondo.jpg" style="width:100%; border:5px solid red;">
 
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
