--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <title>Fabry Orihuela | Official Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body {<img src="img/fondo.jpg" style="width:100%; border:5px solid red;">
-
-      margin: 0;
+    body {
+      <img src="img/fondo.jpg" style="width:100%; border:5px solid red;">      margin: 0;
       font-family: Arial, Helvetica, sans-serif;
       background: #0b0b0b;
       color: #ffffff;
