--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+<head><link rel="stylesheet" href="styles.css?v=99">
   <meta charset="UTF-8" />
   <title>Fabry Orihuela | Official Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
