--- a/index.html
+++ b/index.html
@@ -1,37 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
-<head><link rel="stylesheet" href="styles.css?v=99">
-  <meta charset="UTF-8" />
-  <title>Fabry Orihuela | Official Website</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    body {
-      <img src="img/fondo.jpg" style="width:100%; border:5px solid red;">      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #0b0b0b;
-      color: #ffffff;
-      text-align: center;
-    }
-    h1 {
-      margin-top: 40px;
-      color: #e10600;
-    }
-    p {
-      color: #cccccc;
-    }
-    .button {
-      display: block;
-      margin: 15px auto;
-      padding: 15px;
-      width: 80%;
-      max-width: 300px;
-      background: #e10600;
-      color: white;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: bold;
-    }
-  </style>
+<head> 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fabry Orihuela</title>
+
+  <!-- CSS PRINCIPAL -->
+  <link rel="stylesheet" href="styles.css?v=999">
 </head>
 <body>
 
