--- a/index.html
+++ b/index.html
@@ -1,27 +1,20 @@
-<!DOCTYPE html>
-<html lang="es">
-<head> 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fabry Orihuela</title>
-
-  <!-- CSS PRINCIPAL -->
-  <link rel="stylesheet" href="styles.css?v=999">
-</head>
 <body>
+  <div class="container">
+    <div class="card">
 
-  <h1>Fabry Orihuela</h1>
-  <p>Cantante/Guitarrista • Live Music</p>
+      <img class="logo" src="img/logo.png" alt="Fabry Orihuela">
 
-  <a href="canciones.html" class="button"-pedir">🎶 Pedir canción</a>
-  <a href="shows.html" class="button">🎤 Mis Shows</a>
-  <a class="button" href="#">🛍️ Merchandising</a>
-  <a class="button" href="#">💵 Propina</a>
-  <a class="button" href="#">📲 Sígueme en mis redes</a>
+      <h1>Fabry Orihuela</h1>
+      <p class="tagline">Cantante/Guitarrista • Live Music</p>
 
-  <p style="margin-top:40px; font-size:14px;">
-    
-  </p>
+      <a class="button" href="canciones.html">🎶 Pedir canción</a>
+      <a class="button" href="shows.html">🎤 Mis Shows</a>
+      <a class="button" href="merch.html">🛍️ Merchandising</a>
+      <a class="button" href="propina.html">💵 Propina</a>
+      <a class="button" href="redes.html">📱 Sígueme en mis redes</a>
 
+      <p class="footer-note">Muchas gracias por tu aporte 😊</p>
+
+    </div>
+  </div>
 </body>
-</html>
