--- a/index.html
+++ b/index.html
@@ -1,20 +1,42 @@
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fabry Orihuela</title>
+
+  <!-- CSS principal -->
+  <link rel="stylesheet" href="styles.css?v=2000">
+</head>
+
 <body>
+
   <div class="container">
     <div class="card">
 
-      <img class="logo" src="img/logo.png" alt="Fabry Orihuela">
+      <!-- LOGO -->
+      <img src="img/logo.png" alt="Fabry Orihuela" class="logo">
 
+      <!-- NOMBRE -->
       <h1>Fabry Orihuela</h1>
-      <p class="tagline">Cantante/Guitarrista • Live Music</p>
+      <p class="tagline">Cantante / Guitarrista • Live Music</p>
 
-      <a class="button" href="canciones.html">🎶 Pedir canción</a>
-      <a class="button" href="shows.html">🎤 Mis Shows</a>
-      <a class="button" href="merch.html">🛍️ Merchandising</a>
-      <a class="button" href="propina.html">💵 Propina</a>
-      <a class="button" href="redes.html">📱 Sígueme en mis redes</a>
+      <!-- BOTONES -->
+      <a href="canciones.html" class="button">🎶 Pedir canción</a>
 
+      <a href="shows.html" class="button">🎤 Mis Shows</a>
+
+      <a href="merch.html" class="button">🛍️ Merchandising</a>
+
+      <a href="propina.html" class="button">💵 Propina</a>
+
+      <a href="redes.html" class="button">📱 Sígueme en mis redes</a>
+
+      <!-- TEXTO FINAL -->
       <p class="footer-note">Muchas gracias por tu aporte 😊</p>
 
     </div>
   </div>
+
 </body>
+</html>
