--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <a href="redes.html" class="button">📱 Sígueme en mis redes</a>
 
       <!-- TEXTO FINAL -->
-      <p class="footer-note">Muchas gracias por tu aporte 😊</p>
+      <p class="footer-note">Contratos para todo tipo de eventos</p>
 
     </div>
   </div>
