--- a/merch.html
+++ b/merch.html
@@ -6,7 +6,7 @@
   <title>Merchandising | Fabry Orihuela</title>
 
   <!-- CSS principal -->
-  <link rel="stylesheet" href="styles.css?v=8000">
+  <link rel="stylesheet" href="styles.css?v=9000">
 </head>
 
 <body>
@@ -18,33 +18,57 @@
       <img src="img/logo.png" alt="Fabry Orihuela" class="logo">
 
       <h1>Merchandising</h1>
-      <p class="tagline">Productos oficiales</p>
+      <p class="tagline">Apoya la música independiente 🤘</p>
 
-      <!-- PRODUCTO 1 -->
+      <!-- CAMISETA -->
       <div class="merch-item">
         <h3>👕 Camiseta Oficial</h3>
         <p>Algodón premium • Unisex</p>
-        <a class="button" href="#" target="_blank">Comprar</a>
+
+        <a class="button"
+        href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL.%0A%0ATalla%3A%20__%0ACantidad%3A%20__%0A%0AM%C3%A9todos%20de%20pago%3A%0A%E2%9C%94%20Cash%20App%20(%24fabrymusic)%0A%E2%9C%94%20Venmo%20(%40fabryorihuela-music)%0A%E2%9C%94%20Zelle%20(a%20este%20n%C3%BAmero)%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
+        target="_blank" rel="noopener">
+        👕 Comprar por WhatsApp
+        </a>
+
+        <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
       </div>
 
-      <!-- PRODUCTO 2 -->
+      <!-- GORRA -->
       <div class="merch-item">
         <h3>🧢 Gorra Oficial</h3>
         <p>Edición limitada</p>
-        <a class="button" href="#" target="_blank">Comprar</a>
+
+        <a class="button"
+        href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20GORRA%20OFICIAL.%0A%0ACantidad%3A%20__%0A%0AM%C3%A9todos%20de%20pago%3A%0A%E2%9C%94%20Cash%20App%20(%24fabrymusic)%0A%E2%9C%94%20Venmo%20(%40fabryorihuela-music)%0A%E2%9C%94%20Zelle%20(a%20este%20n%C3%BAmero)%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
+        target="_blank" rel="noopener">
+        🧢 Comprar por WhatsApp
+        </a>
+
+        <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
       </div>
 
-      <!-- PRODUCTO 3 -->
+      <!-- MÚSICA DIGITAL -->
       <div class="merch-item">
-        <h3>💿 Música / Material Digital</h3>
-        <p>Singles, tracks y contenido exclusivo</p>
-        <a class="button" href="#" target="_blank">Acceder</a>
+        <h3>💿 Música / Contenido Digital</h3>
+        <p>Tracks, demos y material exclusivo</p>
+
+        <a class="button"
+        href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20acceder%20a%20tu%20M%C3%9ASICA%20DIGITAL.%0A%0AM%C3%A9todo%20de%20pago%3A%0A%E2%9C%94%20Cash%20App%20(%24fabrymusic)%0A%E2%9C%94%20Venmo%20(%40fabryorihuela-music)%0A%E2%9C%94%20Zelle%20(a%20este%20n%C3%BAmero)%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
+        target="_blank" rel="noopener">
+        💿 Acceder por WhatsApp
+        </a>
+
+        <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
       </div>
 
       <!-- VOLVER -->
       <a href="index.html" class="button">⬅️ Volver</a>
 
-      <p class="footer-note">Gracias por apoyar la música independiente 🤘</p>
+      <p class="footer-note">
+        Gracias por apoyar mi música 🙌<br>
+        Cash App: <strong>$fabrymusic</strong> • Venmo: <strong>@fabryorihuela-music</strong>
+      </p>
 
     </div>
   </div>
