--- a/merch.html
+++ b/merch.html
@@ -4,31 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Merchandising | Fabry Orihuela</title>
-
-  <!-- CSS principal -->
-  <link rel="stylesheet" href="styles.css?v=9000">
+  <link rel="stylesheet" href="styles.css?v=9600">
 </head>
 
 <body>
-
   <div class="container">
     <div class="card">
 
-      <!-- LOGO -->
       <img src="img/logo.png" alt="Fabry Orihuela" class="logo">
 
-      <h1>Merchandising</h1>
+      <h1>🛍️ Merchandising</h1>
       <p class="tagline">Apoya la música independiente 🤘</p>
 
       <!-- CAMISETA -->
       <div class="merch-item">
-        <h3>👕 Camiseta Oficial</h3>
+        <div class="merch-top">
+          <h3>👕 Camiseta Oficial</h3>
+          <div class="price">$25</div>
+        </div>
         <p>Algodón premium • Unisex</p>
 
         <a class="button"
-        href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL.%0A%0ATalla%3A%20__%0ACantidad%3A%20__%0A%0AM%C3%A9todos%20de%20pago%3A%0A%E2%9C%94%20Cash%20App%20(%24fabrymusic)%0A%E2%9C%94%20Venmo%20(%40fabryorihuela-music)%0A%E2%9C%94%20Zelle%20(a%20este%20n%C3%BAmero)%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
-        target="_blank" rel="noopener">
-        👕 Comprar por WhatsApp
+           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL%20(%2425).%0A%0ATalla%3A%20__%0ACantidad%3A%20__%0A%0APagos%3A%20Cash%20App%20(%24fabrymusic)%20%7C%20Venmo%20(%40fabryorihuela-music)%20%7C%20Zelle%20(a%20este%20n%C3%BAmero)%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
+           target="_blank" rel="noopener">
+          👕 Comprar por WhatsApp
         </a>
 
         <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
@@ -36,54 +35,60 @@
 
       <!-- GORRA -->
       <div class="merch-item">
-        <h3>🧢 Gorra Oficial</h3>
+        <div class="merch-top">
+          <h3>🧢 Gorra Oficial</h3>
+          <div class="price">$20</div>
+        </div>
         <p>Edición limitada</p>
 
-
-  <a class="button"
-  href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20el%20FLASH%20DRIVE%20OFICIAL%202GB%20(%2415).%0A%0AEntrega%3A%20Show%20o%20Env%C3%ADo%0A%0AM%C3%A9todos%20de%20pago%3A%0A%E2%9C%94%20Cash%20App%20(%24fabrymusic)%0A%E2%9C%94%20Venmo%20(%40fabryorihuela-music)%0A%E2%9C%94%20Zelle%20(a%20este%20n%C3%BAmero)%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
-  target="_blank" rel="noopener">
-    💾 Comprar por WhatsApp
-  </a>
-
-  <p class="pay-note">
-    Entrega física • Ideal para shows
-  </p>
-</div>
-        
         <a class="button"
-        href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20GORRA%20OFICIAL.%0A%0ACantidad%3A%20__%0A%0AM%C3%A9todos%20de%20pago%3A%0A%E2%9C%94%20Cash%20App%20(%24fabrymusic)%0A%E2%9C%94%20Venmo%20(%40fabryorihuela-music)%0A%E2%9C%94%20Zelle%20(a%20este%20n%C3%BAmero)%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
-        target="_blank" rel="noopener">
-        🧢 Comprar por WhatsApp
+           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20GORRA%20OFICIAL%20(%2420).%0A%0ACantidad%3A%20__%0A%0APagos%3A%20Cash%20App%20(%24fabrymusic)%20%7C%20Venmo%20(%40fabryorihuela-music)%20%7C%20Zelle%20(a%20este%20n%C3%BAmero)%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
+           target="_blank" rel="noopener">
+          🧢 Comprar por WhatsApp
         </a>
 
         <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
       </div>
 
-      <!-- MÚSICA DIGITAL -->
+      <!-- FLASH DRIVE 2GB -->
       <div class="merch-item">
-        <h3>💿 Música / Contenido Digital</h3>
-        <p>Tracks, demos y material exclusivo</p>
+        <div class="merch-top">
+          <h3>💾 Flash Drive Oficial (2 GB)</h3>
+          <div class="price">$15</div>
+        </div>
+        <p>Incluye álbum + singles + contenido exclusivo</p>
 
         <a class="button"
-        href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20acceder%20a%20tu%20M%C3%9ASICA%20DIGITAL.%0A%0AM%C3%A9todo%20de%20pago%3A%0A%E2%9C%94%20Cash%20App%20(%24fabrymusic)%0A%E2%9C%94%20Venmo%20(%40fabryorihuela-music)%0A%E2%9C%94%20Zelle%20(a%20este%20n%C3%BAmero)%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
-        target="_blank" rel="noopener">
-        💿 Acceder por WhatsApp
+           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20el%20FLASH%20DRIVE%20OFICIAL%202GB%20(%2415).%0A%0AEntrega%3A%20Show%20o%20Env%C3%ADo%0A%0APagos%3A%20Cash%20App%20(%24fabrymusic)%20%7C%20Venmo%20(%40fabryorihuela-music)%20%7C%20Zelle%20(a%20este%20n%C3%BAmero)%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
+           target="_blank" rel="noopener">
+          💾 Comprar por WhatsApp
+        </a>
+
+        <p class="pay-note">Entrega física • Ideal para shows</p>
+      </div>
+
+      <!-- LINK A MÚSICA DIGITAL (NO WhatsApp aquí, para que no se vea repetido) -->
+      <div class="merch-item">
+        <div class="merch-top">
+          <h3>💿 Música / Contenido Digital</h3>
+          <div class="price">Desde $3</div>
+        </div>
+        <p>Singles, álbum digital, demos, backstage</p>
+
+        <a class="button" href="musica.html">
+          💿 Ver opciones
         </a>
 
         <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
       </div>
 
-      <!-- VOLVER -->
       <a href="index.html" class="button">⬅️ Volver</a>
 
       <p class="footer-note">
-        Gracias por apoyar mi música 🙌<br>
-        Cash App: <strong>$fabrymusic</strong> • Venmo: <strong>@fabryorihuela-music</strong>
+        Cash App: <strong>$fabrymusic</strong> • Venmo: <strong>@fabryorihuela-music</strong> • Zelle: <strong>+1 484 544 2917</strong>
       </p>
 
     </div>
   </div>
-
 </body>
 </html>
