--- a/merch.html
+++ b/merch.html
@@ -20,7 +20,7 @@
       <div class="merch-item">
         <div class="merch-top">
           <h3>👕 Camiseta Oficial</h3>
-          <div class="price">$25</div>
+          <div class="price">$20</div>
         </div>
         <p>Algodón premium • Unisex</p>
 
@@ -37,7 +37,7 @@
       <div class="merch-item">
         <div class="merch-top">
           <h3>🧢 Gorra Oficial</h3>
-          <div class="price">$20</div>
+          <div class="price">$15</div>
         </div>
         <p>Edición limitada</p>
 
@@ -50,13 +50,13 @@
         <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
       </div>
 
-      <!-- FLASH DRIVE 2GB -->
+      <!-- FLASH DRIVE  -->
       <div class="merch-item">
         <div class="merch-top">
-          <h3>💾 Flash Drive Oficial (2 GB)</h3>
+          <h3>💾 Flash Drive Oficial </h3>
           <div class="price">$15</div>
         </div>
-        <p>Incluye álbum + singles + contenido exclusivo</p>
+        <p>Incluye Versiones en vivo + Canciones originales </p>
 
         <a class="button"
            href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20el%20FLASH%20DRIVE%20OFICIAL%202GB%20(%2415).%0A%0AEntrega%3A%20Show%20o%20Env%C3%ADo%0A%0APagos%3A%20Cash%20App%20(%24fabrymusic)%20%7C%20Venmo%20(%40fabryorihuela-music)%20%7C%20Zelle%20(a%20este%20n%C3%BAmero)%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
