--- a/musica.html
+++ b/musica.html
@@ -1,79 +1,94 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Música & Contenido Digital | Fabry Orihuela</title>
-
-  <link rel="stylesheet" href="styles.css?v=9200">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Música | Fabry Orihuela</title>
+  <link rel="stylesheet" href="styles.css?v=9950">
 </head>
 
 <body>
-
   <div class="container">
     <div class="card">
 
       <!-- LOGO -->
       <img src="img/logo.png" alt="Fabry Orihuela" class="logo">
 
-      <h1>💿 Música & Contenido Digital</h1>
-      <p class="tagline">Contenido exclusivo para apoyar la música independiente</p>
+      <h1>💿 Música</h1>
+      <p class="tagline">Escúchame en todas las plataformas</p>
 
-      <!-- PRODUCTO 1 -->
+      <!-- SPOTIFY -->
       <div class="merch-item">
-        <h3>🎧 Singles / Canciones Digitales</h3>
-        <div class="price">$3</div>
-        <p>Descarga digital (MP3 / WAV)</p>
+        <h3>🟢 Spotify</h3>
+        <p>Escucha todas mis canciones y lanzamientos</p>
 
         <a class="button"
-        href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20un%20SINGLE%20DIGITAL%20(%243).%0A%0AM%C3%A9todos%20de%20pago%3A%0A%E2%9C%94%20Cash%20App%20(%24fabrymusic)%0A%E2%9C%94%20Venmo%20(%40fabryorihuela-music)%0A%E2%9C%94%20Zelle%20(a%20este%20n%C3%BAmero)%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
-        target="_blank" rel="noopener">
-          🎧 Comprar por WhatsApp
+           href="https://open.spotify.com/artist/3gwUw97MMCSVKbFocMIz0a"
+           target="_blank" rel="noopener">
+           ▶️ Escuchar en Spotify
+        </a>
+      </div>
+
+      <!-- APPLE MUSIC -->
+      <div class="merch-item">
+        <h3>🍎 Apple Music</h3>
+        <p>Disponible también en Apple Music</p>
+
+        <a class="button"
+           href="https://music.apple.com/us/artist/fabricio-orihuela/1015171212"
+           target="_blank" rel="noopener">
+           ▶️ Escuchar en Apple Music
+        </a>
+      </div>
+
+      <hr style="border:0; border-top:1px solid rgba(255,255,255,.15); margin:22px 0;">
+
+      <h2>🎧 Contenido exclusivo</h2>
+      <p class="tagline">Apoya la música independiente</p>
+
+      <!-- SINGLE DIGITAL -->
+      <div class="merch-item">
+        <div class="merch-top">
+          <h3>🎵 Single Digital</h3>
+          <div class="price">$3</div>
+        </div>
+        <p>Descarga MP3 / WAV (inmediato)</p>
+
+        <a class="button"
+           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20un%20SINGLE%20DIGITAL%20(%243).%0A%0APagos%3A%20Cash%20App%20(%24fabrymusic)%20%7C%20Venmo%20(%40fabryorihuela-music)%20%7C%20Zelle.%0A%0AEnviar%C3%A9%20el%20comprobante."
+           target="_blank" rel="noopener">
+           🎵 Comprar por WhatsApp
         </a>
 
         <p class="pay-note">Entrega digital inmediata</p>
       </div>
 
-      <!-- PRODUCTO 2 -->
+      <!-- FLASH DRIVE -->
       <div class="merch-item">
-        <h3>💿 EP / Álbum Digital</h3>
-        <div class="price">$10</div>
-        <p>Acceso completo a mi música</p>
+        <div class="merch-top">
+          <h3>💾 Flash Drive Oficial (2 GB)</h3>
+          <div class="price">$15</div>
+        </div>
+        <p>Álbum + singles + contenido exclusivo</p>
 
         <a class="button"
-        href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20el%20EP%20o%20%C3%81LBUM%20DIGITAL%20(%2410).%0A%0AM%C3%A9todos%20de%20pago%3A%0A%E2%9C%94%20Cash%20App%20(%24fabrymusic)%0A%E2%9C%94%20Venmo%20(%40fabryorihuela-music)%0A%E2%9C%94%20Zelle%20(a%20este%20n%C3%BAmero)%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
-        target="_blank" rel="noopener">
-          💿 Comprar por WhatsApp
+           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20el%20FLASH%20DRIVE%20OFICIAL%202GB%20(%2415).%0A%0AEntrega%3A%20Show%20o%20Env%C3%ADo.%0A%0APagos%3A%20Cash%20App%20(%24fabrymusic)%20%7C%20Venmo%20(%40fabryorihuela-music)%20%7C%20Zelle."
+           target="_blank" rel="noopener">
+           💾 Comprar por WhatsApp
         </a>
 
-        <p class="pay-note">Entrega digital (Drive / Email)</p>
+        <p class="pay-note">Entrega física • Ideal para shows</p>
       </div>
 
-      <!-- PRODUCTO 3 -->
-      <div class="merch-item">
-        <h3>🎸 Contenido Exclusivo</h3>
-        <div class="price">$15</div>
-        <p>Maquetas, demos, videos, backstage</p>
-
-        <a class="button"
-        href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20acceder%20al%20CONTENIDO%20EXCLUSIVO%20(%2415).%0A%0AM%C3%A9todos%20de%20pago%3A%0A%E2%9C%94%20Cash%20App%20(%24fabrymusic)%0A%E2%9C%94%20Venmo%20(%40fabryorihuela-music)%0A%E2%9C%94%20Zelle%20(a%20este%20n%C3%BAmero)%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
-        target="_blank" rel="noopener">
-          🔥 Acceder por WhatsApp
-        </a>
-
-        <p class="pay-note">Contenido exclusivo para fans</p>
-      </div>
-
-      <!-- VOLVER -->
       <a href="index.html" class="button">⬅️ Volver</a>
 
       <p class="footer-note">
-        Pagos: Cash App <strong>$fabrymusic</strong> • Venmo <strong>@fabryorihuela-music</strong><br>
-        Zelle: <strong>+1 484 544 2917</strong>
+        Spotify • Apple Music • Cash App • Venmo • Zelle
       </p>
 
     </div>
   </div>
-
 </body>
+</html>
+
 </html>
