--- a/musica.html
+++ b/musica.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Música | Fabry Orihuela</title>
-  <link rel="stylesheet" href="styles.css?v=9950">
+  <link rel="stylesheet" href="styles.css?v=10000">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
       <img src="img/logo.png" alt="Fabry Orihuela" class="logo">
 
       <h1>💿 Música</h1>
-      <p class="tagline">Escúchame en todas las plataformas</p>
+      <p class="tagline">Escúchame en plataformas digitales</p>
 
       <!-- SPOTIFY -->
       <div class="merch-item">
@@ -25,7 +25,7 @@
         <a class="button"
            href="https://open.spotify.com/artist/3gwUw97MMCSVKbFocMIz0a"
            target="_blank" rel="noopener">
-           ▶️ Escuchar en Spotify
+          ▶️ Escuchar en Spotify
         </a>
       </div>
 
@@ -37,51 +37,3 @@
         <a class="button"
            href="https://music.apple.com/us/artist/fabricio-orihuela/1015171212"
            target="_blank" rel="noopener">
-           ▶️ Escuchar en Apple Music
-        </a>
-      </div>
-
-      <hr style="border:0; border-top:1px solid rgba(255,255,255,.15); margin:22px 0;">
-
-      <h2>🎧 Contenido exclusivo</h2>
-      <p class="tagline">Apoya la música independiente</p>
-
-   
-        <a class="button"
-           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20un%20SINGLE%20DIGITAL%20(%243).%0A%0APagos%3A%20Cash%20App%20(%24fabrymusic)%20%7C%20Venmo%20(%40fabryorihuela-music)%20%7C%20Zelle.%0A%0AEnviar%C3%A9%20el%20comprobante."
-           target="_blank" rel="noopener">
-           🎵 Comprar por WhatsApp
-        </a>
-
-        <p class="pay-note">Entrega digital inmediata</p>
-      </div>
-
-      <!-- FLASH DRIVE -->
-      <div class="merch-item">
-        <div class="merch-top">
-          <h3>💾 Flash Drive Oficial (2 GB)</h3>
-          <div class="price">$15</div>
-        </div>
-        <p>Álbum + singles + contenido exclusivo</p>
-
-        <a class="button"
-           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20el%20FLASH%20DRIVE%20OFICIAL%202GB%20(%2415).%0A%0AEntrega%3A%20Show%20o%20Env%C3%ADo.%0A%0APagos%3A%20Cash%20App%20(%24fabrymusic)%20%7C%20Venmo%20(%40fabryorihuela-music)%20%7C%20Zelle."
-           target="_blank" rel="noopener">
-           💾 Comprar por WhatsApp
-        </a>
-
-        <p class="pay-note">Entrega física • Ideal para shows</p>
-      </div>
-
-      <a href="index.html" class="button">⬅️ Volver</a>
-
-      <p class="footer-note">
-        Spotify • Apple Music • Cash App • Venmo • Zelle
-      </p>
-
-    </div>
-  </div>
-</body>
-</html>
-
-</html>
