--- a/merch.html
+++ b/merch.html
@@ -69,18 +69,19 @@
 
       <!-- LINK A MÚSICA DIGITAL (NO WhatsApp aquí, para que no se vea repetido) -->
       <div class="merch-item">
-        <div class="merch-top">
-          <h3>💿 Música / Contenido Digital</h3>
-          <div class="price">Desde $3</div>
-        </div>
-        <p>Singles, álbum digital, demos, backstage</p>
+  <div class="merch-top">
+    <h3>💿 Música / Contenido Digital</h3>
+  </div>
 
-        <a class="button" href="musica.html">
-          💿 Ver opciones
-        </a>
+  <p>Singles digitales</p>
 
-        <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
-      </div>
+  <a class="button" href="musica.html">
+    🎵 Ver singles
+  </a>
+
+  <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
+</div>
+
 
       <a href="index.html" class="button">⬅️ Volver</a>
 
