--- a/musica.html
+++ b/musica.html
@@ -29,11 +29,14 @@
         </a>
       </div>
 
-      <!-- APPLE MUSIC -->
-      <div class="merch-item">
-        <h3>🍎 Apple Music</h3>
-        <p>Disponible también en Apple Music</p>
+     <!-- APPLE MUSIC -->
+<div class="merch-item">
+  <h3>🍎 Apple Music</h3>
+  <p>Disponible también en Apple Music</p>
 
-        <a class="button"
-           href="https://music.apple.com/us/artist/fabricio-orihuela/1015171212"
-           target="_blank" rel="noopener">
+  <a class="button"
+     href="https://music.apple.com/us/artist/fabricio-orihuela/1015171212"
+     target="_blank" rel="noopener">
+    ▶️ Escuchar en Apple Music
+  </a>
+</div>
