--- a/redes.html
+++ b/redes.html
@@ -20,8 +20,7 @@
 
       <!-- INSTAGRAM -->
       <a class="button"
-         href="https://www.instagram.com/fabryorihuelaoficial
-         target="_blank" rel="noopener">
+         href="https://www.instagram.com/fabryorihuelaoficial/         target="_blank" rel="noopener">
         📸 Instagram
       </a>
 
