--- a/redes.html
+++ b/redes.html
@@ -33,8 +33,7 @@
 
       <!-- YOUTUBE -->
       <a class="button"
-         href="https://www.youtube.com/@TU_CANAL_YOUTUBE"
-         target="_blank" rel="noopener">
+         href="https://www.youtube.com/@Fabricioorihuela         target="_blank" rel="noopener">
         ▶️ YouTube
       </a>
 
