--- a/redes.html
+++ b/redes.html
@@ -20,19 +20,19 @@
 
       <!-- INSTAGRAM -->
       <a class="button"
-         href="https://www.instagram.com/fabryorihuelaoficial/         target="_blank" rel="noopener">
+         href="https://www.instagram.com/fabryorihuelaoficial/         
         📸 Instagram
       </a>
 
       <!-- FACEBOOK -->
       <a class="button"
-         href="https://www.facebook.com/fabryorihuelaoficial/         target="_blank" rel="noopener">
+         href="https://www.facebook.com/fabryorihuelaoficial/         
         👍 Facebook
       </a>
 
       <!-- YOUTUBE -->
       <a class="button"
-         href="https://www.youtube.com/@Fabricioorihuela         target="_blank" rel="noopener">
+         href="https://www.youtube.com/@Fabricioorihuela         
         ▶️ YouTube
       </a>
 
